# simple-blog

./: build.sh  pyproject.toml  requirements.txt
backend/blog/: admin.py  models.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_post_managers.py
backend/blog/static/css/: blog.css
backend/blog/static/images/: export (1).csv  export.csv
backend/core/: .env  settings.py  urls.py  views.py
backend/static/css/: blog.css
backend/templates/: base.html  index.html
backend/templates/blog/: index.html  post-detail.html
