[tool.poetry]
name = "simple-blog"
version = "0.1.0"
description = ""
authors = ["Juan Rey <juan.rey@tuta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
